# tactus-quadratic-extension

./: Cargo.toml  DESIGN.md  README.md  check.sh
board/: README.md  cad-00-landed-m0-groundwork.md  cad-01-pmul-ring-laws.md  cad-02-gcd-bezout.md  cad-03-derivative-squarefree.md  cad-04-tower-core.md  cad-05-d5-zero-test.md  cad-06-tower-field-ops.md  cad-07-cauchy-model.md  cad-08-sturm-machinery.md  cad-09-tower-ordered-field.md  cad-10-constraint-layer-port.md  cad-11-equality-checker.md  cad-12-signs-and-fast-path.md  cad-13-solver-and-demo.md  cad-14-deferred-theory-debt.md  cad-15-lean-gate-blocker.md
src/: lib.rs  probe.rs  probe_creal.rs  probe_tower.rs
